src/main/java/com/example/languagelearning/error/ErrorDto.java
package com.example.languagelearning.error;

public record ErrorDto(String errorMessage) {
}
